--- a/demo.html
+++ b/demo.html
@@ -38,8 +38,8 @@
 
 <h3>Downloads:</h3>
 <ul>
-    <li><a href="src/mozDraggables.js">Download mozDraggables.js (2.8kb)</a></li>
-    <li><a href="src/mozDraggables.css">Download mozDraggables.css (461 bytes)</a></li>
+    <li><a href="src/mozDraggables.js" download>Download mozDraggables.js (2.8kb)</a></li>
+    <li><a href="src/mozDraggables.css" download>Download mozDraggables.css (461 bytes)</a></li>
 </ul>
 
 <link href="src/mozDraggables.css" rel="stylesheet" type="text/css" />
